--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -102,3 +102,17 @@ repos:
         name: flake8-test-files
         files: (.*_test\.py)$
         additional_dependencies: [flake8-breakpoint, flake8-builtins, flake8-comprehensions, flake8-continuation, flake8-eradicate, flake8-mutable, flake8-return]
+
+
+
+ci:
+    autofix_commit_msg: |
+        [pre-commit.ci] auto fixes from pre-commit.com hooks
+
+        for more information, see https://pre-commit.ci
+    autofix_prs: true
+    autoupdate_branch: ''
+    autoupdate_commit_msg: '[pre-commit.ci] pre-commit autoupdate'
+    autoupdate_schedule: weekly
+    skip: []
+    submodules: false
