--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -12,9 +12,9 @@ jobs:
         -   uses: actions/checkout@v3
         -   uses: actions/setup-python@v4
             with:
-                python-version: 3.x
-        -   uses: pre-commit/action@v3.0.1
+                python-version: 3.10
         -   uses: actions/cache@v3
             with:
                 path: ~/.cache/pre-commit/
                 key: pre-commit-4|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}
+        -   uses: pre-commit/action@v3.0.1
