--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -11,8 +11,6 @@ on:
         types: [submitted, edited]
     workflow_dispatch:
 
-
-
 jobs:
     single_platform_build:
         name: Build python wheel on linux
@@ -35,18 +33,49 @@ jobs:
         steps:
         -   uses: actions/checkout@v3
 
-      # Used to host cibuildwheel
+        # Install dependencies including ccache
+        -   name: Install dependencies
+            run: |
+                sudo apt-get update
+                sudo apt-get install -y ccache
+
+        # Restore ccache cache
+        -   uses: actions/cache@v3
+            id: ccache-cache
+            with:
+                path: ~/.ccache
+                key: ccache-${{ runner.os }}-${{ hashFiles('**/*.cpp', '**/*.h') }}
+                restore-keys: |
+                    ccache-${{ runner.os }}-
+
+        # Set up Python
         -   uses: actions/setup-python@v3
             with:
                 python-version: ${{ matrix.python-version }}
 
-        -   name: Install dependence
+        # Set ccache environment variables
+        -   name: Configure ccache
+            run: |
+                export CC="ccache gcc"
+                export CXX="ccache g++"
+                export CCACHE_DIR=~/.ccache
+                ccache -z  # Zero statistics before the build
+            shell: bash
+
+        # Install Python dependencies
+        -   name: Install Python dependencies
             run: python -m pip install pybind11 cibuildwheel scikit-build twine pytest
 
+        # Build wheels
         -   name: Build wheels
             run: python -m cibuildwheel --output-dir dist
+            shell: bash
 
-        # Used to update whl in latest draft
+        # Display ccache statistics
+        -   name: Display ccache statistics
+            run: ccache -s
+
+        # Upload compiled artifacts to pre-release
         -   uses: ncipollo/release-action@v1
             if: github.event_name == 'push'
             with:
@@ -56,6 +85,7 @@ jobs:
                 draft: true
                 prerelease: true
                 token: ${{ secrets.GITHUB_TOKEN }}
+
     build_wheels:
         name: Build python wheels
         if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
@@ -83,17 +113,49 @@ jobs:
         steps:
         -   uses: actions/checkout@v3
 
-      # Used to host cibuildwheel
+        # Install dependencies including ccache
+        -   name: Install dependencies
+            run: |
+                sudo apt-get update
+                sudo apt-get install -y ccache
+
+        # Restore ccache cache
+        -   uses: actions/cache@v3
+            id: ccache-cache
+            with:
+                path: ~/.ccache
+                key: ccache-${{ runner.os }}-${{ hashFiles('**/*.cpp', '**/*.h') }}
+                restore-keys: |
+                    ccache-${{ runner.os }}-
+
+        # Set up Python
         -   uses: actions/setup-python@v3
             with:
                 python-version: ${{ matrix.python-version }}
 
-        -   name: Install dependence
+        # Set ccache environment variables
+        -   name: Configure ccache
+            run: |
+                export CC="ccache gcc"
+                export CXX="ccache g++"
+                export CCACHE_DIR=~/.ccache
+                ccache -z  # Zero statistics before the build
+            shell: bash
+
+        # Install Python dependencies
+        -   name: Install Python dependencies
             run: python -m pip install pybind11 cibuildwheel scikit-build twine pytest
 
+        # Build wheels
         -   name: Build wheels
             run: python -m cibuildwheel --output-dir dist
+            shell: bash
 
+        # Display ccache statistics
+        -   name: Display ccache statistics
+            run: ccache -s
+
+        # Publish package
         -   name: Publish package
             run: python -m twine upload dist/*.whl
             if: ${{ contains(github.ref, '/tags/') }}
