--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -31,11 +31,28 @@ jobs:
         steps:
         -   uses: actions/checkout@v3
 
-        # Install dependencies including ccache
+        # Install dependencies including ccache and g++-10
         -   name: Install dependencies
             run: |
                 sudo apt-get update
-                sudo apt-get install -y ccache
+                sudo apt-get install -y software-properties-common
+                sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+                sudo apt-get update
+                sudo apt-get install -y ccache gcc-10 g++-10
+
+        # Set up Python
+        -   uses: actions/setup-python@v3
+            with:
+                python-version: ${{ matrix.python-version }}
+
+        # Set ccache and compiler environment variables
+        -   name: Configure ccache and g++-10
+            run: |
+                export CC="ccache gcc-10"
+                export CXX="ccache g++-10"
+                export CCACHE_DIR=~/.ccache
+                ccache -z  # Zero statistics before the build
+            shell: bash
 
         # Restore ccache cache
         -   uses: actions/cache@v3
@@ -46,27 +63,16 @@ jobs:
                 restore-keys: |
                     ccache-${{ runner.os }}-
 
-        # Set up Python
-        -   uses: actions/setup-python@v3
-            with:
-                python-version: ${{ matrix.python-version }}
-
-        # Set ccache environment variables
-        -   name: Configure ccache
-            run: |
-                export CC="ccache gcc"
-                export CXX="ccache g++"
-                export CCACHE_DIR=~/.ccache
-                ccache -z  # Zero statistics before the build
-            shell: bash
-
         # Install Python dependencies
         -   name: Install Python dependencies
             run: python -m pip install pybind11 scikit-build build twine pytest
 
         # Build wheels
         -   name: Build wheels using python build
-            run: python -m build --wheel
+            run: |
+                export CC="ccache gcc-10"
+                export CXX="ccache g++-10"
+                python -m build --wheel
             shell: bash
 
         # Display ccache statistics
